# profile_lxd

./: .ycm_extra_conf.py  CMakeLists.txt  playbook
src/: CMakeLists.txt  additive_square.c  additive_square.h  app.c  app.h  common.h  disk.h  disk_thread.c  disk_thread.h  envelope.c  envelope.h  err.h  inc_fftw.h  main.c  playbook.h  pulse_gen.c  pulse_gen.h
src/unit/: catch_main.cpp  envelope.cpp
test_lxd/: decode.py  lib.py  main.py
